FIxed navigation on header

--- a/styles/RestaurantPreview.module.css
+++ b/styles/RestaurantPreview.module.css
@@ -1,21 +1,20 @@
 .main{
     width: 100%;
-    height: 750px;
-    overflow-y: auto;
-    max-width: 500px;
+    max-width: 380px;
 }
 
 
 /* Restaurant Header */
 .restaurantHeader{
     display: flex;
+    width: 100%;
     flex-direction: column;
 }
 
 .restaurantLogoContainer{
     display: flex;
     width: 100%;
-    height: 10vh;
+    height: 70px;
     justify-content: center;
     background-color: yellow;
     text-align: center;
@@ -31,17 +30,16 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height:55px;
+    height:60px;
     background-color: blue;
-    overflow-x: auto;
-    overflow-y: hidden;
+    overflow: auto;
+    white-space: nowrap;
     scroll-behavior: smooth;
 }
 
 .restaurantHeaderCategory{
     display: inline-block;
-    margin-right: 12px;
-    margin-left: 12px;
+    margin: 10px;
 }
 
 .anchorLink{
@@ -53,7 +51,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height:55px;
+    height:40px;
     background-color: orange;
     overflow-x: auto;
     overflow-y: hidden;
@@ -63,26 +61,23 @@
 
 .restaurantHeaderSubcategory{
     display: inline-block;
-    margin-right: 12px;
-    margin-left: 12px;
+    margin: 10px;
 }
 
 /* Restaurant Menu */
 .restaurantMenuContainer{
-    padding: 5px;
+    height: 420px;
+    overflow-y: auto;
+    padding: 12px;
 }
 
 /* Restaurant Category */
 .restaurantCategoryContainer{
-    padding: 5px;
+   display: block;
 }
-
-
-/* Restaurant Subcategory */
-.restaurantCategoryContainer{
-    padding: 5px;
+.catName{
+    margin: 0px;
 }
-
 
 /*Item container*/
 .itemContainer{
