--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -1,3 +1,14 @@
+
+
+.main{
+    padding: 20px;
+}
+.profileContainer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 20px;
+}
 .menuListContainer{
     display: flex;
     flex-direction: row;
@@ -10,14 +21,14 @@
     width: 30%;
     height: 200px;
     padding: 15px 25px;
-    margin: 10px 20px;
+    margin: 20px;
     background-color: #ffb703;
     border-radius: 5px;
 }
 .qrCodeContainer{
     display: flex;
     padding: 30px;
-    height: auto;
+    height: 120px;
     background-color: white;
     border-radius: 15px;
 }
@@ -34,3 +45,33 @@
     display: flex;
     flex-direction: row;
 }
+
+/* Responsive */
+
+@media only screen and (max-width: 600px) {
+
+    .main{
+        padding: 0px;
+    }
+
+    .menuListContainer{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menuContainer{
+        width: calc(90% - 40px);
+        margin: 0px;
+        padding: 0px 20px;
+    }
+
+    .qrCodeContainer{
+        display: flex;
+        width: 30%;
+        padding: 15px 5px;
+        height: 80px;
+        background-color: white;
+        border-radius: 15px;
+    }
+  
+  }
