--- a/styles/RestaurantCreator.module.css
+++ b/styles/RestaurantCreator.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     padding: 20px;
+    justify-content: space-between;
 }
 
 /***Restaurant Creator***/
@@ -123,7 +124,7 @@
 
 /*Restaurant Preview*/
 .previewContainer{
-    width: 500px;
+    width: 300px;
 }
 
 
